k8s/generated/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: synapse            # e.g., flashmaster
