k8s/generated/05-deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: synapse            # e.g., flashmaster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: registry.digitalocean.com/shtrial-reg/synapse            # e.g., flashmaster-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
