k8s/generated/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synapse-web
  namespace: synapse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synapse-web
  template:
    metadata:
      labels:
        app: synapse-web
    spec:
      containers:
        - name: web
          image: registry.digitalocean.com/shtrial-reg/synapse-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synapse-api
  namespace: synapse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synapse-api
  template:
    metadata:
      labels:
        app: synapse-api
    spec:
      containers:
        - name: api
          image: registry.digitalocean.com/shtrial-reg/synapse-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
