k8s/generated/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: synapse            # e.g., flashmaster
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - synapse            # e.g., flashmaster.shtrial.com
        - api.synapse            # e.g., flashmaster.shtrial.com
      secretName: app-tls
  rules:
    - host: synapse            # e.g., flashmaster.shtrial.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
    - host: api.synapse            # e.g., flashmaster.shtrial.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
